<?xml version="1.0"?>
<package>
  <name>yumi_gazebo</name>
  <version>1.0.0</version>
  <description>The yumi_gazebo package</description>
  <maintainer email="karthik@todo.todo">karthik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>yumi_description</run_depend>
  <run_depend>effort_controllers</run_depend>  
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>  </export>
</package>
